fixtures/metadata-resolve/failing/model_permissions/disallow_duplicate_roles/resolve_error.expected
Error: The role 'user' has been defined more than once in model permissions for model 'Albums (in subgraph subgraphs)'
    ╭─[ <unknown>:59:25 ]
    │
 59 │                 "role": "user",
    │                         ───┬──  
    │                            ╰──── This role is a duplicate
────╯
